--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ enableRobotsTXT = true
 
 [languages]
 [languages.en]
-title = 'Oakdale Auto Repair (209) 318-9352'
+title = 'Oakdale Auto Repair - 1011 C Post Road'
 weight = 1
 contentDir = 'content'
 # languageDirection = 'rtl' for Right-To-Left languages
@@ -45,7 +45,7 @@ filename = 'sitemap.xml'
 
 [params]
   favicon = 'false'
-  description = 'Oakdale Auto Repair 318-9352 '
+  description = 'Oakdale Auto Repair 318-9352'
   facebook = ''
   twitter = ''
   instagram = ''
