--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ DefaultContentLanguage = 'en'
   url = '/AutoRepair'
   weight = 20
 [[menu.main]]
-  name = 'Oil Change & Maintenance'
+  name = 'Oil Changes Maintenance'
   url = '/OilChanges'
   weight = 30
 [[menu.main]]
